--- a/index.html
+++ b/index.html
@@ -3,94 +3,8 @@
     <head>
         <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
         <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
+        <link rel="stylesheet" href="style.css">
         
-        <style>
-            .board {
-                  position: relative;
-                  margin-left: 1%;
-                }
-    .board-column {
-      position: absolute;
-      left: 0;
-      right: 0;
-      width: 30%;
-      margin: 0 1.5%;
-      background: #f0f0f0;
-      border-radius: 3px;
-      z-index: 1;
-    }
-    .board-column.muuri-item-releasing {
-      z-index: 2;
-    }
-    .board-column.muuri-item-dragging {
-      z-index: 3;
-      cursor: move;
-    }
-    .board-column-header {
-      position: relative;
-      height: 50px;
-      line-height: 50px;
-      overflow: hidden;
-      padding: 0 20px;
-      text-align: center;
-      background: #333;
-      color: #fff;
-      border-radius: 3px 3px 0 0;
-    }
-    @media (max-width: 600px) {
-      .board-column-header {
-        text-indent: -1000px;
-      }
-    }
-    .board-column.todo .board-column-header {
-      background: #4A9FF9;
-    }
-    .board-column.working .board-column-header {
-      background: #f9944a;
-    }
-    .board-column.done .board-column-header {
-      background: #2ac06d;
-    }
-    .board-column-content {
-      position: relative;
-      border: 10px solid transparent;
-      min-height: 95px;
-    }
-    .board-item {
-      position: absolute;
-      width: 100%;
-      margin: 5px 0;
-    }
-    .board-item.muuri-item-releasing {
-      z-index: 9998;
-    }
-    .board-item.muuri-item-dragging {
-      z-index: 9999;
-      cursor: move;
-    }
-    .board-item.muuri-item-hidden {
-      z-index: 0;
-    }
-    .board-item-content {
-      position: relative;
-      padding: 20px;
-      background: #fff;
-      border-radius: 4px;
-      font-size: 17px;
-      cursor: pointer;
-      -webkit-box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
-      box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
-    }
-    @media (max-width: 600px) {
-      .board-item-content {
-        text-align: center;
-      }
-      .board-item-content span {
-        display: none;
-      }
-    }
-
-        </style>
         
     </head>
     <body>
@@ -113,6 +27,96 @@
       <div class="board-item"><div class="board-item-content"><span>Item #</span>8</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>9</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>10</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+    </div>
+  </div>
+  <div class="board-column done">
+    <div class="board-column-header">Not attached</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
+      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
     </div>
   </div>
   <div class="board-column done">
