--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     </head>
     <body>
         <div class="board">
-  <div class="board-column todo">
-    <div class="board-column-header">San Mateo</div>
+  <div class="board-column done">
+    <div class="board-column-header">RMST 1</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>1</div></div>
+      <div class="board-item"><div class="board-item-content" class="o"><span>Item #</span>1</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>2</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>3</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>4</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>5</div></div>
     </div>
   </div>
-  <div class="board-column working">
-    <div class="board-column-header">Watsonville</div>
+  <div class="board-column done">
+    <div class="board-column-header">RMST 2</div>
     <div class="board-column-content">
       <div class="board-item"><div class="board-item-content"><span>Item #</span>6</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>7</div></div>
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
+    <div class="board-column-header">RMST 3</div>
     <div class="board-column-content">
       <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
+    <div class="board-column-header">RMST 4</div>
     <div class="board-column-content">
       <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
+    <div class="board-column-header">RMST 5</div>
     <div class="board-column-content">
       <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
@@ -60,7 +60,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
+    <div class="board-column-header">RMST 6</div>
     <div class="board-column-content">
       <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
@@ -70,7 +70,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
+    <div class="board-column-header">TOC</div>
     <div class="board-column-content">
       <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
       <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
@@ -79,58 +79,7 @@
       <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
     </div>
   </div>
-  <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
-    <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
-    </div>
-  </div>
-  <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
-    <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
-    </div>
-  </div>
-  <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
-    <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
-    </div>
-  </div>
-  <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
-    <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
-    </div>
-  </div>
-  <div class="board-column done">
-    <div class="board-column-header">Not attached</div>
-    <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
-    </div>
-  </div>
-</div>
-         <script src="/jquery/dist/jquery.js"></script>
+        <script src="/jquery/dist/jquery.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script>
             var socket = io.connect('http://localhost:4200');
