--- a/index.html
+++ b/index.html
@@ -12,61 +12,97 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 1</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content" class="o"><span>Item #</span>1</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>2</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>3</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>4</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>5</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">MANGOSINGIGNACIO</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">KIER</div></div>
+        <div class="board-item"><div class="board-item-content" class="n">FINN</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">PHILLIPS</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DAGGI</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DAVISON</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">BULAGAO</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FACTOR</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">XU</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">BARAJAS</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">TRAN</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">MACGREGOR</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FISHER</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 2</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>6</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>7</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>8</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>9</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>10</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">PARK</div></div>
+        <div class="board-item"><div class="board-item-content" class="n">PENOLA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">ORTIZ</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">CHUN</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FLORES</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARCIA C</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARCIA M</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">NGUYEN H</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">MORALES</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">AGUIRRE</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 3</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">QUIOCSON</div></div>
+        <div class="board-item"><div class="board-item-content" class="n">BARRETTO</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">CAMACHO</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GALLEGOS</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FRANKIE</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">KONG</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">ANDRADE</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DIAZ</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 4</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">HO</div></div>
+        <div class="board-item"><div class="board-item-content" class="n">SALDIBAR</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">VISAYA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">MARTINEZ</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FERRATT</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">RICE</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">ANDERSON</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">OROZOCO</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">SAUNIER</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 5</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">REGAN</div></div>
+        <div class="board-item"><div class="board-item-content" class="n">MAGART-DAVIS</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">CHAMNESS</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DEMESA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">EAGLES</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">JONES</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">PALLAYA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">SIMONS</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DELACRUZ</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">LINDBECK</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 6</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>11</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>12</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>13</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>14</div></div>
-      <div class="board-item"><div class="board-item-content"><span>Item #</span>15</div></div>
+      <div class="board-item"><div class="board-item-content" class="o">GORNELL</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">DEJESUS</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">CRUZ</div></div>
+        <div class="board-item"><div class="board-item-content" class="n">CAUDILLO</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">LARA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FLORIANO</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DOMINGO</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">OTIKA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">MAGANA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">CLEMMONS</div></div>
     </div>
   </div>
   <div class="board-column done">
