--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 1</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" class="o">MANGOSINGIGNACIO</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">IGNACIO</div></div>
         <div class="board-item"><div class="board-item-content" class="o">KIER</div></div>
         <div class="board-item"><div class="board-item-content" class="n">FINN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">PHILLIPS</div></div>
