--- a/index.html
+++ b/index.html
@@ -105,6 +105,26 @@
         <div class="board-item"><div class="board-item-content" class="e">CLEMMONS</div></div>
     </div>
   </div>
+  <div class="board-column done">
+    <div class="board-column-header">TOC</div>
+    <div class="board-column-content">
+      <div class="board-item"><div class="board-item-content" class="o">PHAL</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">NGUYEN</div></div>
+        <div class="board-item"><div class="board-item-content" class="o">MACIAS</div></div>
+        <div class="board-item"><div class="board-item-content" class="n">SPINELLI</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">MULLEE</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">BLACK</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">SULLIVAN</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">MCENTEE</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">LEE</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">SOLIS</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARICA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">SCHILITZ</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">NARVASA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">JAMPHAL</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">SEBASTIAN</div></div>
+    </div>
+  </div>
 </div>
         <script src="/jquery/dist/jquery.js"></script>
         <script>
