--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="board-item"><div class="board-item-content" class="e">LEE</div></div>
         <div class="board-item"><div class="board-item-content" class="e">SOLIS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GARICA</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">SCHILITZ</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">SCHLITZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">NARVASA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">JAMPHAL</div></div>
         <div class="board-item"><div class="board-item-content" class="e">SEBASTIAN</div></div>
