--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 1</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" class="o">IGNACIO</div></div>
-        <div class="board-item"><div class="board-item-content" class="o">KIER</div></div>
-        <div class="board-item"><div class="board-item-content" class="n">FINN</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">IGNACIO</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">KIER</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">FINN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">PHILLIPS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAGGI</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAVISON</div></div>
@@ -30,8 +30,8 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 2</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" class="o">PARK</div></div>
-        <div class="board-item"><div class="board-item-content" class="n">PENOLA</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">PARK</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">PENOLA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">ORTIZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHUN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FLORES</div></div>
@@ -45,8 +45,8 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 3</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" class="o">QUIOCSON</div></div>
-        <div class="board-item"><div class="board-item-content" class="n">BARRETTO</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">QUIOCSON</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">BARRETTO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CAMACHO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GALLEGOS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
@@ -59,8 +59,8 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 4</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" class="o">HO</div></div>
-        <div class="board-item"><div class="board-item-content" class="n">SALDIBAR</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">HO</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">SALDIBAR</div></div>
         <div class="board-item"><div class="board-item-content" class="e">VISAYA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ</div></div>
@@ -75,8 +75,8 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 5</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" class="o">REGAN</div></div>
-        <div class="board-item"><div class="board-item-content" class="n">MAGART-DAVIS</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">REGAN</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">MAGART-DAVIS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHAMNESS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DEMESA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">EAGLES</div></div>
@@ -91,10 +91,10 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 6</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content" class="o">GORNELL</div></div>
-        <div class="board-item"><div class="board-item-content" class="o">DEJESUS</div></div>
-        <div class="board-item"><div class="board-item-content" class="o">CRUZ</div></div>
-        <div class="board-item"><div class="board-item-content" class="n">CAUDILLO</div></div>
+      <div class="board-item"><div class="board-item-content" id="o">GORNELL</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">DEJESUS</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">CRUZ</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">CAUDILLO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LARA</div></div>
@@ -108,10 +108,10 @@
   <div class="board-column done">
     <div class="board-column-header">TOC</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content" class="o">PHAL</div></div>
-        <div class="board-item"><div class="board-item-content" class="o">NGUYEN</div></div>
-        <div class="board-item"><div class="board-item-content" class="o">MACIAS</div></div>
-        <div class="board-item"><div class="board-item-content" class="n">SPINELLI</div></div>
+      <div class="board-item"><div class="board-item-content" id="o">PHAL</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">NGUYEN</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">MACIAS</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">SPINELLI</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MULLEE</div></div>
         <div class="board-item"><div class="board-item-content" class="e">BLACK</div></div>
         <div class="board-item"><div class="board-item-content" class="e">SULLIVAN</div></div>
