--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 1</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o">IGNACIO</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b>IGNACIO</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">KIER</div></div>
-        <div class="board-item"><div class="board-item-content" id="n">FINN</div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b>FINN</b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">PHILLIPS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAGGI</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAVISON</div></div>
@@ -23,14 +23,14 @@
         <div class="board-item"><div class="board-item-content" class="e">XU</div></div>
         <div class="board-item"><div class="board-item-content" class="e">BARAJAS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">TRAN</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">MACGREGOR</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">FISHER</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">MACGREGOR</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">FISHER</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 2</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o">PARK</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b>PARK</b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">PENOLA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">ORTIZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHUN</div></div>
@@ -38,8 +38,8 @@
         <div class="board-item"><div class="board-item-content" class="e">GARCIA C</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GARCIA M</div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN H</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">MORALES</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">AGUIRRE</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">MORALES</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">AGUIRRE</div></div>
     </div>
   </div>
   <div class="board-column done">
@@ -52,8 +52,8 @@
         <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FRANKIE</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KONG</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">ANDRADE</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">DIAZ</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">ANDRADE</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">DIAZ</div></div>
     </div>
   </div>
   <div class="board-column done">
@@ -68,8 +68,8 @@
         <div class="board-item"><div class="board-item-content" class="e">RICE</div></div>
         <div class="board-item"><div class="board-item-content" class="e">ANDERSON</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">OROZOCO</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">SAUNIER</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">OROZCO</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">SAUNIER</div></div>
     </div>
   </div>
   <div class="board-column done">
@@ -85,42 +85,42 @@
         <div class="board-item"><div class="board-item-content" class="e">SIMONS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DELACRUZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LINDBECK</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">NGUYEN</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 6</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content" id="o">GORNELL</div></div>
-        <div class="board-item"><div class="board-item-content" id="o">DEJESUS</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">GORNELL</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b>DEJESUS</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">CRUZ</div></div>
-        <div class="board-item"><div class="board-item-content" id="n">CAUDILLO</div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b>CAUDILLO</b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LARA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FLORIANO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DOMINGO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">OTIKA</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">MAGANA</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">CLEMMONS</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">MAGANA</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">CLEMMONS</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">TOC</div>
     <div class="board-column-content">
-      <div class="board-item"><div class="board-item-content" id="o">PHAL</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b>PHAL</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">NGUYEN</div></div>
         <div class="board-item"><div class="board-item-content" id="o">MACIAS</div></div>
-        <div class="board-item"><div class="board-item-content" id="n">SPINELLI</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">MULLEE</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">BLACK</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">SULLIVAN</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">MCENTEE</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">SPINELLI</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">MULLEE</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">BLACK</div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b>SULLIVAN</b></div></div>
+        <div class="board-item"><div class="board-item-content" class="n">MCENTEE</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LEE</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">SOLIS</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">SOLIS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GARICA</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">SCHLITZ</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">NARVASA</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">SCHLITZ</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">NARVASA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">JAMPHAL</div></div>
         <div class="board-item"><div class="board-item-content" class="e">SEBASTIAN</div></div>
     </div>
