--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 1</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i> 🚗</b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">KIER</div> 🚗</div>
+        <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
+        <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b>FINN</b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">PHILLIPS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAGGI</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">DAVISON 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DAVISON🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">BULAGAO</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">FACTOR 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FACTOR🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">XU</div></div>
         <div class="board-item"><div class="board-item-content" class="e">BARAJAS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">TRAN</div></div>
@@ -36,8 +36,8 @@
         <div class="board-item"><div class="board-item-content" class="e">CHUN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FLORES</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GARCIA C</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">GARCIA M 🚗</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">NGUYEN H 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARCIA M🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">NGUYEN H🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MORALES</div></div>
         <div class="board-item"><div class="board-item-content" id="a">AGUIRRE</div></div>
     </div>
@@ -46,11 +46,11 @@
     <div class="board-column-header">RMST 3</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o">QUIOCSON</div></div>
-        <div class="board-item"><div class="board-item-content" id="n">BARRETTO 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">BARRETTO🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CAMACHO</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">GALLEGOS 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GALLEGOS🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">FRANKIE 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FRANKIE🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KONG</div></div>
         <div class="board-item"><div class="board-item-content" id="a">ANDRADE</div></div>
         <div class="board-item"><div class="board-item-content" id="a">DIAZ</div></div>
@@ -61,7 +61,7 @@
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o">HO</div></div>
         <div class="board-item"><div class="board-item-content" id="n">SALDIBAR</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">VISAYA 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FERRATT</div></div>
@@ -69,7 +69,7 @@
         <div class="board-item"><div class="board-item-content" class="e">ANDERSON</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
         <div class="board-item"><div class="board-item-content" id="a">OROZCO</div></div>
-        <div class="board-item"><div class="board-item-content" id="a">SAUNIER 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">SAUNIER🚗</div></div>
     </div>
   </div>
   <div class="board-column done">
@@ -80,45 +80,45 @@
         <div class="board-item"><div class="board-item-content" class="e">CHAMNESS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DEMESA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">EAGLES</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">JONES 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">JONES🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">PALLAYA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">SIMONS</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">DELACRUZ 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DELACRUZ🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LINDBECK</div></div>
-        <div class="board-item"><div class="board-item-content" id="a">NGUYEN 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">NGUYEN🚗</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 6</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o">GORNELL 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o"><b>DEJESUS</b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">CRUZ 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">CRUZ🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b>CAUDILLO</b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LARA</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">FLORIANO 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FLORIANO🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DOMINGO</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">OTIKA 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">OTIKA🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MAGANA</div></div>
-        <div class="board-item"><div class="board-item-content" id="a">CLEMMONS 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">CLEMMONS🚗</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">TOC</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o"><b>PHAL 🚗</b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">NGUYEN 🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="o">MACIAS 🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="o">SPINELLI 🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="o">MULLEE 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b>PHAL🚗</b></div></div>
+        <div class="board-item"><div class="board-item-content" id="o">NGUYEN🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">MACIAS🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">SPINELLI🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">MULLEE🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o">BLACK</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b>SULLIVAN</b></div></div>
-        <div class="board-item"><div class="board-item-content" id="n">MCENTEE 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">MCENTEE🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n">LEE</div></div>
         <div class="board-item"><div class="board-item-content" id="n">SOLIS</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">GARICA 🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARICA🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n">SCHLITZ</div></div>
         <div class="board-item"><div class="board-item-content" id="n">NARVASA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">JAMPHAL</div></div>
