--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="n"><b>FINN</b></div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b><i>FINN</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">PHILLIPS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAGGI</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAVISON🚗</div></div>
@@ -30,8 +30,8 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 2</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o"><b>PARK</b>🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="n">PENOLA</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b><i>PENOLA</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">ORTIZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHUN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FLORES</div></div>
@@ -45,8 +45,8 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 3</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o">QUIOCSON</div></div>
-        <div class="board-item"><div class="board-item-content" id="n">BARRETTO🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b><i>QUIOCSON</i></b></div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b><i>BARRETTO🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">CAMACHO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GALLEGOS🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
@@ -59,8 +59,8 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 4</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o">HO</div></div>
-        <div class="board-item"><div class="board-item-content" id="n">SALDIBAR</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ</div></div>
@@ -75,8 +75,8 @@
   <div class="board-column done">
     <div class="board-column-header">RMST 5</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o">REGAN</div></div>
-        <div class="board-item"><div class="board-item-content" id="n">MAGART-DAVIS</div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b><i>REGAN</i></b></div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b><i>MAGART-DAVIS</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHAMNESS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DEMESA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">EAGLES</div></div>
@@ -92,9 +92,9 @@
     <div class="board-column-header">RMST 6</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="o"><b>DEJESUS</b></div></div>
+        <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">CRUZ🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="n"><b>CAUDILLO</b></div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b><i>CAUDILLO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LARA</div></div>
