--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
             boardGrid.on('dragReleaseEnd', function (item) {
                 console.log(item);
             });
+            
+            $("#foo > div").length
         </script>
     </body>
 </html>
