--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="board-item"><div class="board-item-content" class="e">TRAN</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MACGREGOR</div></div>
         <div class="board-item"><div class="board-item-content" id="a">FISHER</div></div>
+        <div id="count"></div>
     </div>
   </div>
   <div class="board-column done">
@@ -209,7 +210,7 @@
                 console.log(item);
             });
             
-            $("#foo > div").length
+            //Document.getElementById('count') $("#count1 > div").length 
         </script>
     </body>
 </html>
