--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="board-item"><div class="board-item-content" id="n">MCENTEE🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n">LEE</div></div>
         <div class="board-item"><div class="board-item-content" id="n">SOLIS</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">GARICA🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARCIA🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n">SCHLITZ</div></div>
         <div class="board-item"><div class="board-item-content" id="n">NARVASA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">JAMPHAL</div></div>
