--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="board-item"><div class="board-item-content" id="o"><b><i>QUIOCSON</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">CRUZ🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>BARRETTO🚗</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" class="e">CAMACHO</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">CAMACHO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GALLEGOS🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FRANKIE🚗</div></div>
