--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="board">
   <div class="board-column done">
     <div class="board-column-header">RMST 1</div>
-    <div class="board-column-content">
+    <div class="board-column-content" id="count1">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>FINN</i></b></div></div>
@@ -210,7 +210,7 @@
                 console.log(item);
             });
             
-            //Document.getElementById('count') $("#count1 > div").length 
+            console.log(Document.getElementById('count') $("#count1 > div").length)
         </script>
     </body>
 </html>
