--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 console.log(item);
             });
             
-            //console.log(Document.getElementById('count') $("#count1 > div").length);
+            console.log(Document.getElementById('count').childElementCount);
         </script>
     </body>
 </html>
