--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
             boardGrid.on('dragReleaseEnd', function (item) {
                 console.log(item);
             });
-            
-            console.log(Document.getElementById('count').childElementCount);
+            var element = Document.getElementById("count1");
+            console.log(element.childElementCount);
         </script>
     </body>
 </html>
