--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
             });
             var element = Document.getElementById("count1");
             console.log(element.childElementCount);
+            console.log(element.children.length);
+);
         </script>
     </body>
 </html>
